fix: alignment of global nav with `inline` menu style

--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -221,7 +221,6 @@ header
     a, .category-nav-heading
       display: flex
       color: var(--header-text-color)
-      padding: 4px 0
       position: relative
       outline-offset: 4px
       border-radius: 0
